--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -24,35 +24,35 @@
         android:orientation="horizontal"
         android:id="@+id/middle"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="200dp"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/movie_title">
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:id="@+id/imageView"/>
+            android:id="@+id/movie_poster"
+            android:layout_weight="1"/>
 
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_weight="1">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="2015"
-                android:id="@+id/year"/>
+                android:id="@+id/release_year"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="120min"
-                android:id="@+id/duration"
+                android:id="@+id/runtime"
                 android:textStyle="italic"/>
 
             <TextView
@@ -60,7 +60,7 @@
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="8.1 / 10.0"
-                android:id="@+id/rating"/>
+                android:id="@+id/vote"/>
 
             <Button
                 android:layout_width="wrap_content"
@@ -77,7 +77,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Lorem ipsum dolor sit amet"
-        android:id="@+id/summary"
+        android:id="@+id/overview"
         android:layout_below="@+id/middle"/>
 
     <TextView
@@ -85,7 +85,7 @@
         android:layout_height="wrap_content"
         android:text="Trailer"
         android:id="@+id/trailer"
-        android:layout_below="@+id/summary"
+        android:layout_below="@+id/overview"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"/>
 
