--- a/app/src/main/res/layout/list_review.xml
+++ b/app/src/main/res/layout/list_review.xml
@@ -3,12 +3,17 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Large Text"
+        android:background="@color/grey"
         android:id="@+id/content"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"/>
@@ -16,9 +21,9 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="author"
+        android:text="@string/author"
         android:id="@+id/author"
-        android:textSize="18dp"
-        android:gravity="right"/>
+        android:textSize="18sp"
+        android:gravity="end"/>
 
 </LinearLayout>
